# auto-evoloop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
auto_evoloop/: __init__.py  cli.py
auto_evoloop/demo/: __init__.py  run.py
auto_evoloop/reporting/: compare.py  report.py
auto_evoloop/runners/: __init__.py  langgraph_runner.py
auto_evoloop/sampling/: __init__.py  extract_sample.py
auto_evoloop/scoring/: score.py
auto_evoloop/traces/: __init__.py  clean.py  langfuse_fetch.py
core_skills/: CONTEXT.md  DESIGN.md  README.md
core_skills/00_meta/entropy-control/: CHECKLIST.md
core_skills/00_meta/meta-reflection/: SKILL.md
core_skills/00_meta/meta-reflection/references/: output-template.md  (+1 more)
core_skills/01_prepare/auto-trace-prep/: SKILL.md
core_skills/02_analyze/auto-case-summary/: SKILL.md
core_skills/02_analyze/auto-single-case-analyzer/: SKILL.md
core_skills/03_plan/auto-fix-planner/: SKILL.md
core_skills/04_execute/auto-fix-executor/: SKILL.md
docs/: README.md  alpha1-migration-plan.md  architecture.md  concepts.md  public-migration-inventory.md  quickstart.md  release-checklist.md  sanitization-policy.md  source-faithful-migration-policy.md  source-faithful-redaction-notes.md
examples/synthetic_demo/: README.md  config.yaml  expected_report.md  input.csv  synthetic_trace.json
tests/: test_cli.py  test_core_skills_contract.py  test_docs_contract.py  test_public_boundary.py
(+24 files in other folders)
